 - GB: Partially fix timing for skipped BIOS
 - GB MBC: Fix MBC1 mode changing behavior
 - GB Video: Fix state after skipping BIOS (fixes mgba.io/i/1715 and mgba.io/i/1716)
 - GBA: Fix timing advancing too quickly in rare cases
 - GBA BIOS: Implement dummy sound driver calls
 - GBA BIOS: Improve HLE BIOS timing
 - GBA BIOS: Fix reloading video registers after reset (fixes mgba.io/i/1808)
 - GBA DMA: Linger last DMA on bus (fixes mgba.io/i/301 and mgba.io/i/1320)
 - GBA Memory: Improve gamepak prefetch timing
 - GBA Memory: Stall on VRAM access in mode 2 (fixes mgba.io/i/190)
 - GBA SIO: Fix copying Normal mode transfer values
 - GBA SIO: Fix Normal mode being totally broken (fixes mgba.io/i/1800)
 - GBA Video: Latch scanline at end of Hblank (fixes mgba.io/i/1319)
 - GBA Video: Fix Hblank timing
 - SM83: Emulate HALT bug
Other fixes:
 - All: Improve export headers (fixes mgba.io/i/1738)
 - Core: Ensure ELF regions can be written before trying
 - Debugger: Don't skip undefined instructions when debugger attached
 - FFmpeg: Fix some small memory leaks
 - FFmpeg: Fix encoding of time base
 - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
 - Qt: Fix static compilation in MinGW (fixes mgba.io/i/1769)
 - Qt: Fix a race condition in the frame inspector
 - Qt: Add dummy English translation file (fixes mgba.io/i/1469)
 - SM83: Simplify register pair access on big endian
 - VFS: Fix directory node listing on some filesystems
Misc:
 - 3DS: Use "wide mode" where applicable for slightly better filtering
 - GB: Allow pausing event loop while CPU is blocked
 - GBA: Allow pausing event loop while CPU is blocked
 - Debugger: Keep track of global cycle count
 - FFmpeg: Add looping option for GIF/APNG
 - Qt: Renderer can be changed while a game is running
 - Qt: Add hex index to palette view
 - Qt: Add transformation matrix info to sprite view
 - Util: Reset vector size on deinit

0.8.3: (2020-08-03)
Emulation fixes: